compiler/testData/diagnostics/testsWithJsStdLib/native/nested/nativeNestedClassProhibited.kt
// !DIAGNOSTICS: -UNUSED_VARIABLE

class A {
    <!NATIVE_INNER_CLASS_PROHIBITED!>@native inner class B<!>
}
